# immich-animals

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  README.md  REPLICATION.md  conftest.py  copy_models.sh  environment.yml  mise.toml  process.md  pyproject.toml  reload_immich.sh  requirements.txt  tmp.txt  yolo11n-dog-pose.yaml  yolov11n-pose.yaml
.gemini/: settings.json
.planning/: detection-dataset-implementation-notes.md  human-planning.md  long-term-folder-structure.md  master.md  overarching.md  phase-1-two-stage-implementation-plan.md  phase-1.md  phase-2-summary-report.md  phase-2.md  phase-3.md  phase-4.md  phase-5-simplified.md  phase-5.md  phase1-migration-plan.md  prompt-2.md  prompt-6.md  prompt-8.md  revised-phase-1.md  testing-strategy.md
agent_context/: AGENTS.md  CLEAN_CODE_AGENTS.md
animal_id/: __init__.py
dog_id/: __init__.py
scripts/: 01_prepare_detection_data.py  02_inspect_datasets.py  02_inspect_detection_datasets.py  03_train_detection_model.py  04_prepare_keypoint_data.py  05_prepare_embedding_data.py  05_train_keypoint_model.py  06_prepare_embedding_data.py  06_visualize_embedding_data.py  07_train_embedding_model.py  07_visualize_embedding_data.py  08_train_embedding_model.py  08_validate_embeddings.py  09_export_embedding_model.py  09_validate_embeddings.py  10_export_detector_onnx.py  10_export_embedding_model.py  10_export_embedding_onnx.py  11_export_detector_onnx.py  11_export_keypoint_onnx.py  12_export_keypoint_onnx.py  12_run_full_pipeline.py  13_run_full_pipeline.py  13_test_immich_integration.py  run_ablation.py  (+8 more)
(+120 files in other folders)
